Change toList() to Collectors.toList() to accomodate gitpod not running java 16+. All tests passed